Add Unisoc-Jingpad Changes

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -98,12 +98,12 @@
     <string name="cancel" msgid="7401575239009060939">"取消"</string>
     <string name="ok" msgid="163967937451981024">"确定"</string>
     <string name="phone_type_and_phone_number" msgid="5034188169563878371">"<xliff:g id="PHONE_TYPE">%1$s</xliff:g> • <xliff:g id="PHONE_NUMBER">%2$s</xliff:g>"</string>
-    <string name="no_info_provided" msgid="716200382010821001">"没有任何关于手机机主的信息"</string>
-    <string name="tap_pencil" msgid="2723698054265296934">"如果这是您的手机，请点按铅笔图标，添加相应的信息，以备紧急时使用"</string>
+    <string name="no_info_provided" msgid="716200382010821001">"没有任何关于平板电脑机主的信息"</string>
+    <string name="tap_pencil" msgid="2723698054265296934">"如果这是您的平板电脑，请点按铅笔图标，添加相应的信息，以备紧急时使用"</string>
     <string name="clear_all" msgid="8899013032870561633">"全部清除"</string>
     <string name="clear" msgid="3648880442502887163">"清除"</string>
     <string name="clear_all_message" msgid="1548432000373861295">"要清除所有信息和联系人吗？"</string>
-    <string name="emergency_info_footer" msgid="8751758742506410146">"添加医疗信息和紧急情况联系人有助于第一线救援人员在发生紧急事件时提供相关援助。\n\n任何人都无需将您的手机解锁，即可在锁定屏幕上看到此类信息，并能通过点按相关联系人的姓名拨打对方的电话。"</string>
+    <string name="emergency_info_footer" msgid="8751758742506410146">"添加医疗信息和紧急情况联系人有助于第一线救援人员在发生紧急事件时提供相关援助。\n\n任何人都无需将您的平板电脑解锁，即可在锁定屏幕上看到此类信息，并能通过点按相关联系人的姓名拨打对方的电话。"</string>
     <string name="settings_suggestion_title" msgid="2503369576806243476">"添加紧急信息"</string>
     <string name="settings_suggestion_body" msgid="5559349261345837716">"让一线急救人员查看您的信息"</string>
     <string name="user_image_take_photo" msgid="2779924488370750102">"拍照"</string>
