--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -98,12 +98,12 @@
     <string name="cancel" msgid="7401575239009060939">"取消"</string>
     <string name="ok" msgid="163967937451981024">"確定"</string>
     <string name="phone_type_and_phone_number" msgid="5034188169563878371">"<xliff:g id="PHONE_TYPE">%1$s</xliff:g> • <xliff:g id="PHONE_NUMBER">%2$s</xliff:g>"</string>
-    <string name="no_info_provided" msgid="716200382010821001">"沒有手機擁有者的資料"</string>
-    <string name="tap_pencil" msgid="2723698054265296934">"如果這是您的手機，請輕按鉛筆圖示加入資料，在緊急情況時便會在此顯示"</string>
+    <string name="no_info_provided" msgid="716200382010821001">"沒有平板電腦擁有者的資料"</string>
+    <string name="tap_pencil" msgid="2723698054265296934">"如果這是您的平板電腦，請輕按鉛筆圖示加入資料，在緊急情況時便會在此顯示"</string>
     <string name="clear_all" msgid="8899013032870561633">"全部清除"</string>
     <string name="clear" msgid="3648880442502887163">"清除"</string>
     <string name="clear_all_message" msgid="1548432000373861295">"要清除所有資料和聯絡人嗎？"</string>
-    <string name="emergency_info_footer" msgid="8751758742506410146">"新増醫療資訊和緊急聯絡人可以協助先遣急救員處理緊急情況。\n\n在您的手機未解鎖的情況下，任何人都能在上鎖畫面中查看這些資料，並透過輕按緊急聯絡人姓名來撥打對方的號碼。"</string>
+    <string name="emergency_info_footer" msgid="8751758742506410146">"新増醫療資訊和緊急聯絡人可以協助先遣急救員處理緊急情況。\n\n在您的平板電腦未解鎖的情況下，任何人都能在上鎖畫面中查看這些資料，並透過輕按緊急聯絡人姓名來撥打對方的號碼。"</string>
     <string name="settings_suggestion_title" msgid="2503369576806243476">"新增緊急資料"</string>
     <string name="settings_suggestion_body" msgid="5559349261345837716">"讓先遣急救員查看您的資料"</string>
     <string name="user_image_take_photo" msgid="2779924488370750102">"拍攝相片"</string>
